# decision-tree-analyzer

./: README.md  info  main.py  pyproject.toml  theme  tree
src/core/: __init__.py  controller.py  dataset.py  logger.py
src/data_io/: __init__.py  loader.py  saver.py
src/gui/: main_window.py
src/gui/dialogs/: __init__.py  about_dialog.py  load_dialog.py
src/gui/widgets/: __init__.py  data_table.py  parameter_panel.py  plot_canvas.py
src/logging/: __init__.py  error_messages.py  log_messages.py
src/modeling/: __init__.py  evaluator.py  metrics.py  tree_model.py
src/preprocessing/: __init__.py  cleaner.py  encoder.py  scaler.py  splitter.py
src/visualization/: __init__.py  plots.py  tree_plotter.py
tests/preprocessing/cleaner/: conftest.py  test_basic.py  test_handle_missings.py  test_remove_duplicates.py  test_remove_outliers_iqr.py  test_remove_outliers_zscore.py  test_reset_index.py
