[project]
name = "decision-tree-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "hypothesis>=6.151.9",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyqt5>=5.15.11",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "scikit-learn>=1.8.0",
    "uv>=0.10.9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
